--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-lastest, macos-latest]
+        os: [ubuntu-latest]
         node: [14, 16, 18]
 
     steps:
