--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -8,16 +8,16 @@ on:
 
 jobs:
   build:
-    runs-on: ${{matrix.os}}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
         node: [14, 16, 18]
 
     steps:
+
       - name: check repo
         uses: actions/checkout@v2
-      - name: setup node version ${{matrix.node}}
+      - name: setup node version ${{matrix.node-version}}
         uses: actions/checkout@v1
         with:
           node-version: ${{matrix.node}}
